Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-2287
extent size allocation will never get to maxSize depending on starting value
Undo Transition
Closed
null
Export
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Minor - P4
Fix Version/s:
1.6.5-post
,
1.7.5
Affects Version/s:
None
Component/s:
Storage
Labels:
None
Field Tab
Aha! Info
Operating System:
ALL
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Attachments
Activity
People
Assignee:
Eliot Horowitz (Inactive)
Reporter:
Eliot Horowitz (Inactive)
Participants:
auto
,
Eliot Horowitz
Votes
:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
Dec 24 2010 06:23:48 PM UTC
Updated:
Jul 12 2016 12:18:37 AM UTC
Resolved:
Dec 24 2010 06:32:11 PM UTC
PagerDuty