fix follow up extent sizing when an int overflow SERVER-2287